fix: vertical alignment when in an element

--- a/src/styles/cyan-themed.sass
+++ b/src/styles/cyan-themed.sass
@@ -8,6 +8,8 @@ body.cyan--themed
   div.cyan-page
     article.column
       width: 220px
+      h1, h2
+        color: var(--cyan-heading-color)
 
 
 .cyan--app
